# acorn-happ

./: .gitignore  Cargo.toml  DEVELOPERS.md
.github/workflows/: release.yml
happ/zomes/profiles/: Cargo.toml
happ/zomes/profiles_integrity/: Cargo.toml
happ/zomes/projects/: Cargo.toml
happ/zomes/projects/src/project/outcome/: crud.rs
happ/zomes/projects_integrity/: Cargo.toml
happ/zomes/projects_integrity/src/project/project_meta/: entry.rs
