[package]
edition = "2021"
name = "projects"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "projects"

[dependencies]
hdk_crud = { version = "=0.12.0", features = ["no_example"] }
hdk = "=0.1.4"
holo_hash = {version = "=0.1.4", features = ["encoding"]}
projects_integrity = { path = "../projects_integrity" }
paste = "*"
chrono = { version = "=0.4.22", default-features = false, features = ["clock", "std", "oldtime", "serde"] }
# use whatever serde hdk uses
serde = "=1.0.164"
thiserror = "=1.0.40"

